--- a/Nx.Core/Nx.Core.Tests/Nx.Core.Tests.csproj
+++ b/Nx.Core/Nx.Core.Tests/Nx.Core.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhenUsingBootstrapperExtensions.cs" />
     <Compile Include="WhenUsingConditions.cs" />
+    <Compile Include="WhenUsingModules.cs" />
     <Compile Include="WhenUsingTheBootstrapper.cs" />
     <Compile Include="WhenUsingTheLogFactory.cs" />
   </ItemGroup>
