--- a/Nx.Logging/Nx.Logging.Net40/Nx.Logging.Net40.csproj
+++ b/Nx.Logging/Nx.Logging.Net40/Nx.Logging.Net40.csproj
@@ -49,7 +49,7 @@
       <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
     </Reference>
     <Reference Include="Nx.Core">
-      <HintPath>..\packages\Nx.Core.0.1.5.0\lib\portable-win+net45+sl40+wp71\Nx.Core.dll</HintPath>
+      <HintPath>..\packages\Nx.Core.0.2.2\lib\net40\Nx.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
