removed HP's tag, fixed title

--- a/Nx.Core/Nx.Core.Package/Package.nuspec
+++ b/Nx.Core/Nx.Core.Package/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Nx.Core</id>
     <version>$version$</version>
-    <title>Nx.Core.Package</title>
+    <title>Nx.Core</title>
     <authors>Maciek Misztal</authors>
     <owners>ICode</owners>
     <description>
@@ -24,7 +24,7 @@
       <dependency id="Portable.CommonServiceLocator.NinjectAdapter"/>
     </dependencies>
     <references></references>
-    <tags>Hewlett-Packard Company</tags>
+    <tags>PCL</tags>
   </metadata>
   <files>
     <file src="lib\" target="lib" />
