--- a/Nx.Web/Nx.Web.Tests/packages.config
+++ b/Nx.Web/Nx.Web.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jQuery" version="2.0.3" targetFramework="net45" />
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="1.1.3" targetFramework="net45" />
@@ -8,7 +8,8 @@
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="NUnit" version="2.6.2" targetFramework="net45" />
   <package id="Nx.Core" version="0.2.7" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Portable.CommonServiceLocator" version="1.2.2" targetFramework="net45" />
