binding redirect added

--- a/Nx.Mongo/Nx.Mongo.IntegrationTests/App.config
+++ b/Nx.Mongo/Nx.Mongo.IntegrationTests/App.config
@@ -3,4 +3,12 @@
   <connectionStrings>
     <add name="testdatabase" connectionString="mongodb://nxmongo:nxmongo@widmore.mongohq.com:10010/nx_mongo_testdatabase" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.1.0" newVersion="2.0.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
