--- a/Nx.EF/Nx.EF.IntegrationTests/Nx.EF.IntegrationTests.csproj
+++ b/Nx.EF/Nx.EF.IntegrationTests/Nx.EF.IntegrationTests.csproj
@@ -84,6 +84,10 @@
     <Compile Include="AssemblySetup.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="ITestEntityRepository.cs" />
+    <Compile Include="Migrations\201311241350583_InitialCreate.cs" />
+    <Compile Include="Migrations\201311241350583_InitialCreate.Designer.cs">
+      <DependentUpon>201311241350583_InitialCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -107,6 +111,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201311241350583_InitialCreate.resx">
+      <DependentUpon>201311241350583_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
