--- a/Nx.EF/Nx.EF.IntegrationTests/App.config
+++ b/Nx.EF/Nx.EF.IntegrationTests/App.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="testDatabase" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=nx_tests;Persist Security Info=True;User ID=nx;Password=nx" providerName="System.Data.SqlClient" />
     <add name="testMigrationsDatabase" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=nx_migration_tests;Persist Security Info=True;User ID=nx;Password=nx" providerName="System.Data.SqlClient" />
@@ -18,7 +19,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.1.0" newVersion="2.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.9.9" newVersion="2.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
