--- a/Nx.Cloud/Nx.Cloud.Tests/NLog.config
+++ b/Nx.Cloud/Nx.Cloud.Tests/NLog.config
@@ -1,21 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <extensions>
-    <add assembly="TT.Cloud.Core"/>
-  </extensions>
+  <!--<extensions>
+    <add assembly="TT.Cloud.Core" />
+  </extensions>-->
   <targets>
-    <target name="console" xsi:type="Console" layout="[${logger}] [${level:uppercase=true}] : ${message}"/>
-    <target name="logFile" xsi:type="File" fileName="log.txt" layout="[${longdate}] [${logger}] [${level:uppercase=true}] : ${message}"/>
-    <!--<target name="azureTable"   xsi:type="AzureLog" layout="${message}"/>-->
-    <!--<target name="securityLogFile" xsi:type="File" fileName="${basedir}/App_Data//Logs/security.txt" layout="[${longdate}] [${logger}] [${level:uppercase=true}] : ${message}"/>-->
+    <target name="console" xsi:type="Console" layout="[${logger}] [${level:uppercase=true}] : ${message}" />
+    <target name="logFile" xsi:type="File" fileName="log.txt" layout="[${longdate}] [${logger}] [${level:uppercase=true}] : ${message}" />
+    <!--<target name="azureTable"   xsi:type="AzureLog" layout="${message}" />-->
+    <!--<target name="securityLogFile" xsi:type="File" fileName="${basedir}/App_Data//Logs/security.txt" layout="[${longdate}] [${logger}] [${level:uppercase=true}] : ${message}" />-->
   </targets>
 
   <rules>
-    <!--<logger name="*" minlevel="Trace" writeTo="file"/>-->
-    <!--<logger name="*" minlevel="Trace" writeTo="debugConsole"/>-->
-    <!--<logger name="*" minlevel="Trace" writeTo="systemLogFile"/>-->
-    <logger name="*" minlevel="Trace" writeTo="console"/>
-    <logger name="*" minlevel="Info" writeTo="logFile"/>
-    <!--<logger name="SECURITY" minlevel="Trace" writeTo="securityLogFile"/>-->
+    <!--<logger name="*" minlevel="Trace" writeTo="file" />-->
+    <!--<logger name="*" minlevel="Trace" writeTo="debugConsole" />-->
+    <!--<logger name="*" minlevel="Trace" writeTo="systemLogFile" />-->
+    <logger name="*" minlevel="Trace" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="logFile" />
+    <!--<logger name="SECURITY" minlevel="Trace" writeTo="securityLogFile" />-->
   </rules>
 </nlog>
