--- a/Sources/Nx.Core.Tests/Nx.Core.Tests.csproj
+++ b/Sources/Nx.Core.Tests/Nx.Core.Tests.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7CF46FB7-2396-4C6E-A74F-13D61173EA41}</ProjectGuid>
+    <ProjectGuid>{5A0F33E9-4915-4FE0-9BCE-80F873C47FEF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nx</RootNamespace>
-    <AssemblyName>Nx.Core</AssemblyName>
+    <RootNamespace>Nx.Core.Tests</RootNamespace>
+    <AssemblyName>Nx.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -36,7 +36,10 @@
       <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="Ninject.Extensions.Conventions">
-      <HintPath>..\packages\ninject.extensions.conventions.3.0.0.11\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
+      <HintPath>..\packages\Ninject.Extensions.Conventions.3.0.0.11\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,38 +50,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bootstrappers\BootstrapperBase.cs">
-      <DependentUpon>IBootstrapper.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Bootstrappers\HardcodedLoadingStrategy.cs">
-      <DependentUpon>IModuleLoadingStrategy.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Bootstrappers\IBootstrapper.cs" />
-    <Compile Include="Bootstrappers\IBootstrapperExtension.cs" />
-    <Compile Include="Bootstrappers\IModuleLoadingStrategy.cs" />
-    <Compile Include="Condition.cs" />
-    <Compile Include="Kernel\KernelExtensions.cs" />
-    <Compile Include="Kernel\ReflectionExtensions.cs" />
-    <Compile Include="Logging\ILogFactory.cs" />
-    <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\LogFactory.cs">
-      <DependentUpon>ILogFactory.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Logging\NullLogger.cs">
-      <DependentUpon>ILogger.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\Module.cs" />
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Singleton.cs" />
+    <Compile Include="WhenUsingBootstrapperExtensions.cs" />
+    <Compile Include="WhenUsingConditions.cs" />
+    <Compile Include="WhenUsingModules.cs" />
+    <Compile Include="WhenUsingTheBootstrapper.cs" />
+    <Compile Include="WhenUsingTheLogFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <ProjectReference Include="..\Nx.Core\Nx.Core.csproj">
+      <Project>{7cf46fb7-2396-4c6e-a74f-13d61173ea41}</Project>
+      <Name>Nx.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
