--- a/Sources/Nx.Core/Nx.Core.csproj
+++ b/Sources/Nx.Core/Nx.Core.csproj
@@ -32,11 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.3.0.0.4001\lib\net40-client\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject">
       <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
-    <Reference Include="Ninject.Extensions.Conventions">
-      <HintPath>..\packages\ninject.extensions.conventions.3.0.0.11\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
+    <Reference Include="Ninject.Extensions.Interception">
+      <HintPath>..\packages\Ninject.Extensions.Interception.3.0.0.8\lib\net45-full\Ninject.Extensions.Interception.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Extensions.Interception.DynamicProxy">
+      <HintPath>..\packages\Ninject.Extensions.Interception.DynamicProxy.3.0.0.8\lib\net45-full\Ninject.Extensions.Interception.DynamicProxy.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,7 +63,18 @@
     <Compile Include="Bootstrappers\IBootstrapperExtension.cs" />
     <Compile Include="Bootstrappers\IModuleLoadingStrategy.cs" />
     <Compile Include="Condition.cs" />
+    <Compile Include="Extensions\IEnumerableExtensions.cs" />
+    <Compile Include="Extensions\ReflectionExtensions.cs" />
+    <Compile Include="Interception\DisposeAttribute.cs" />
+    <Compile Include="Interception\ExtendedDisposeAttribute.cs" />
+    <Compile Include="Interception\ExtendedDisposeInterceptor.cs" />
+    <Compile Include="Interception\InterceptorAttribute.cs" />
+    <Compile Include="Interception\MeasureExecutionTimeAttribute.cs" />
+    <Compile Include="Interception\MeasureExecutionTimeInterceptor.cs" />
+    <Compile Include="Interception\MethodInterceptor.cs" />
+    <Compile Include="Interception\MethodInterceptorAttribute.cs" />
     <Compile Include="Kernel\KernelExtensions.cs" />
+    <Compile Include="Kernel\NxKernel.cs" />
     <Compile Include="Logging\ILogFactory.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\LogFactory.cs">
@@ -73,9 +90,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
