--- a/Sources/Nx.Core.Tests/Nx.Core.Tests.csproj
+++ b/Sources/Nx.Core.Tests/Nx.Core.Tests.csproj
@@ -50,13 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Bootstrappers\Bootstrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WhenUsingBootstrapperExtensions.cs" />
-    <Compile Include="WhenUsingConditions.cs" />
-    <Compile Include="WhenUsingModules.cs" />
-    <Compile Include="WhenUsingTheBootstrapper.cs" />
-    <Compile Include="WhenUsingTheLogFactory.cs" />
+    <Compile Include="Bootstrappers\WhenUsingBootstrapperExtensions.cs" />
+    <Compile Include="Conditions\WhenUsingConditions.cs" />
+    <Compile Include="Modules\WhenUsingModules.cs" />
+    <Compile Include="Bootstrappers\WhenUsingTheBootstrapper.cs" />
+    <Compile Include="Logging\WhenUsingTheLogFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -66,6 +66,9 @@
       <Project>{7cf46fb7-2396-4c6e-a74f-13d61173ea41}</Project>
       <Name>Nx.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interception\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
