--- a/Sources/Nx.Mongo.IntegrationTests/Nx.Mongo.IntegrationTests.csproj
+++ b/Sources/Nx.Mongo.IntegrationTests/Nx.Mongo.IntegrationTests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="WhenUsingTheMongoRepository.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".rake" />
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
