--- a/Sources/Nx.Core.Tests/Nx.Core.Tests.csproj
+++ b/Sources/Nx.Core.Tests/Nx.Core.Tests.csproj
@@ -92,8 +92,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Bootstrapper.feature</DependentUpon>
     </Compile>
+    <Compile Include="Bootstrappers\BootstrapperModules.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BootstrapperModules.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Bootstrappers\BootstrapperModulesSteps.cs" />
     <Compile Include="Bootstrappers\BootstrapperSteps.cs" />
+    <Compile Include="Bootstrappers\BootstrapperTests.cs" />
     <Compile Include="Bootstrappers\TestExtension.cs" />
+    <Compile Include="Bootstrappers\TestModule.cs" />
     <Compile Include="Bootstrappers\TestType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Conditions\WhenUsingConditions.cs" />
@@ -107,6 +115,10 @@
     <None Include="Bootstrappers\Bootstrapper.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Bootstrapper.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Bootstrappers\BootstrapperModules.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>BootstrapperModules.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
