--- a/Sources/Nx.Core.Tests/packages.config
+++ b/Sources/Nx.Core.Tests/packages.config
@@ -7,8 +7,10 @@
   <package id="Ninject.Extensions.Interception" version="3.0.0.8" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.0.0.8" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
+  <package id="NUnit" version="2.6.0.12054" targetFramework="net45" />
   <package id="NUnitTestAdapter" version="1.0" targetFramework="net45" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
   <package id="SpecFlow.NUnit" version="1.1.1" targetFramework="net45" />
+  <package id="SpecFlow.NUnit" version="1.1.0" targetFramework="net45" />
   <package id="SpecFlow.NUnit.Runners" version="1.0.0" targetFramework="net45" />
 </packages>
