--- a/Tests/Nx.Core.IntegrationTests/App.config
+++ b/Tests/Nx.Core.IntegrationTests/App.config
@@ -3,9 +3,10 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
-  <specFlow>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  <!-- For additional details on SpecFlow configuration options see https://github.com/techtalk/SpecFlow/wiki/Configuration --><unitTestProvider name="NUnit" /></specFlow>
+  
+  
+  
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -14,4 +15,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+  <!-- For additional details on SpecFlow configuration options see https://github.com/techtalk/SpecFlow/wiki/Configuration --><unitTestProvider name="NUnit" /></specFlow></configuration>
