rake files added

--- a/Tests/Nx.Core.IntegrationTests/Nx.Core.IntegrationTests.csproj
+++ b/Tests/Nx.Core.IntegrationTests/Nx.Core.IntegrationTests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="SpecFlowNUnitExtension.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".rake" />
     <None Include="App.config" />
     <None Include="Bootstrappers\Bootstrapper.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
