work on integration tests

--- a/Tests/Nx.Core.IntegrationTests/Nx.Core.IntegrationTests.csproj
+++ b/Tests/Nx.Core.IntegrationTests/Nx.Core.IntegrationTests.csproj
@@ -37,18 +37,18 @@
     </Reference>
     <Reference Include="nunit.core">
       <HintPath>..\..\packages\NUnitTestAdapter.1.0\lib\nunit.core.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="nunit.core.interfaces">
       <HintPath>..\..\packages\NUnitTestAdapter.1.0\lib\nunit.core.interfaces.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="nunit.util">
       <HintPath>..\..\packages\NUnitTestAdapter.1.0\lib\nunit.util.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="NUnit.VisualStudio.TestAdapter">
       <HintPath>..\..\packages\NUnitTestAdapter.1.0\lib\NUnit.VisualStudio.TestAdapter.dll</HintPath>
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="Bootstrappers\BootstrapperSteps.cs" />
     <Compile Include="Bootstrappers\BootstrapperTests.cs" />
+    <Compile Include="Bootstrappers\ScenarioCleanUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bootstrappers\TestExtension.cs" />
     <Compile Include="Bootstrappers\TestModule.cs" />
