--- a/Tests/Nx.Core.UnitTests/Nx.Core.UnitTests.csproj
+++ b/Tests/Nx.Core.UnitTests/Nx.Core.UnitTests.csproj
@@ -55,6 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".rake" />
+    <None Include="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +65,9 @@
       <Project>{7cf46fb7-2396-4c6e-a74f-13d61173ea41}</Project>
       <Name>Nx.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
