--- a/Sources/Nx.Domain/packages.config
+++ b/Sources/Nx.Domain/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.0.0.4001" targetFramework="net45" />
-  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
-  <package id="Ninject.Extensions.Interception" version="3.0.0.8" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.4" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.4" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.2.4" targetFramework="net45" />
 </packages>
